# sentiment-analyzer

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.cpu.yaml  docker-compose.cuda.yaml  docker-compose.yaml  main.py  ngrok.yaml  output.md  pyproject.toml  requirements.txt  test.py
bert/: main.py
docs/: README_ANALYZER.md
services/bert/: Dockerfile.CPU  Dockerfile.CUDA  config.py  infer.py  main.py  mapper.py  requirements.txt  schema.py
services/ml/: requirements.txt
services/ml/stt/: config.py  infer.py
services/ocr/: Dockerfile.CPU  Dockerfile.CUDA
services/stt/: Dockerfile.CPU  Dockerfile.CUDA  infer.py  main.py  requirements.txt  utils.py
services/ui/: README.md  docker-compose.yaml  next.config.ts  package.json  tsconfig.json
services/ui/src/app/: layout.tsx  page.tsx
services/ui/src/components/analysis/: audio-analysis.tsx  text-analysis.tsx  url-analysis.tsx
src/: config.py  logging.py
src/api/v1/audio/: router.py
src/api/v1/document/: router.py  script.py
src/api/v1/text/: router.py
src/api/v1/url/: router.py  script.py
src/backend/api/v1/audio/: router.py
src/backend/api/v1/document/: router.py
src/backend/api/v1/text/: router.py
src/backend/api/v1/url/: router.py
src/backend/genai/: executor.py
src/backend/genai/analyzer/: graph.py  model.py
src/bert/: Dockerfile  requirements.txt
src/genai/: Dockerfile
src/genai/analyzer/: executor.py  graph.py  llm.py  model.py  prompt.py  schema.py  state.py
src/ml/: speech2text.py
src/ui/: Dockerfile
src/ui/src/app/: globals.css
src/ui/src/types/: analysis.ts
tts/: Dockerfile  infer.py  main.py  script.py
(+7 files in other folders)
