[project]
name = "sentiment-analyzer-service"
version = "0.1.0"
description = "A service for analyzing sentiment from text, audio, document, and URL using various LLMs."
dependencies = [
    "beautifulsoup4==4.14.2",
    "fastapi==0.119.1",
    "httpx==0.28.1",
    "langchain==1.0.2",
    "langchain_community==0.4",
    "langchain_google_genai==3.0.0",
    "langchain_ollama==1.0.0",
    "langchain_openai==1.0.1",
    "langgraph==1.0.1",
    "pydantic==2.12.3",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "uvicorn==0.23.2",
    "gdown>=4.0.0",
    "python-multipart==0.0.20"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"