[project]
name = "sentiment-analyzer-service"
version = "0.1.0"
description = "A service for analyzing sentiment from text, audio, document, and URL using various LLMs."

dependencies = [
    "crawl4ai==0.8.0",
    "trafilatura==2.0.0",
    "beautifulsoup4==4.14.2",
    "fastapi==0.119.1",
    "httpx==0.28.1",
    "langchain==1.0.2",
    "langchain-community==0.4",
    "langchain-google_genai==3.0.0",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.1",
    "langgraph==1.0.1",
    "pydantic==2.12.3",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "uvicorn==0.23.2",
    "gdown>=4.0.0",
    "python-multipart==0.0.20",
    "pydantic-settings==2.10.1",
    "pypdf==5.8.0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"